--- a/templates/index.tsx.hbs
+++ b/templates/index.tsx.hbs
@@ -41,6 +41,12 @@ const Index = () => {
           {{features.item1}}
         </li>
         <li>
+          <span role="img" aria-label="flower">
+            🌸
+          </span>{' '}
+          {{features.item8}}
+        </li>
+        <li>
           <span role="img" aria-label="pencil2">
             ✏️
           </span>{' '}
