how to uninstall

--- a/templates/index.tsx.hbs
+++ b/templates/index.tsx.hbs
@@ -47,6 +47,12 @@ const Index = () => {
           {{features.item8}}
         </li>
         <li>
+          <span role="img" aria-label="smile">
+            😃
+          </span>{' '}
+          {{features.item9}}
+        </li>
+        <li>
           <span role="img" aria-label="pencil2">
             ✏️
           </span>{' '}
