--- a/templates/index.tsx.hbs
+++ b/templates/index.tsx.hbs
@@ -14,9 +14,10 @@ const Index = () => {
 
   return (
     <Main
-      meta={<Meta title="{{title}}" description="{{description}}" />}
+      meta={<Meta title="{{title}}" description="{{description}}" lang="{{lang}}"/>}
       title="{{title}}"
       description="{{description}}"
+      lang="{{lang}}"
     >
       <h1 className="text-2xl font-bold">{{overview.title}}</h1>
       <p>
